# myopengl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: .gitignore
lib/: CMakeConfig.hpp.in  importedShaders.hpp
shaders/: doubleTextureColor.frag  pos2col3.vert  pos2col3tex2.vert  textureColor.frag
src/: getFileContents.cpp  getFileContents.hpp  main.cpp  shader.hpp
